# scraper-zonaprop

./: .gitignore  README.md  main.py  pyproject.toml  zonaprop-scraping.py
src/: browser.py  scraper.py  utils.py
test/: conftest.py  test_browser.py  test_scraper.py  test_utils.py
