[project]
name = "scraper-zonaprop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "cloudscraper>=1.2.71",
    "lxml>=5.4.0",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "scikit-learn>=1.6.1",
]
