[project]
name = "scraper-zonaprop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "cloudscraper>=1.2.71",
    "configparser>=7.2.0",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",
    "janitor>=0.1.1",
    "lxml>=5.4.0",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "pyarrow>=20.0.0",
    "pyjanitor>=0.31.0",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "scikit-learn>=1.6.1",
    "tqdm>=4.67.1",
]
